Add about page, team history, and contact page.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Team 694
 ---
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
