--- a/index.html
+++ b/index.html
@@ -2,6 +2,42 @@
 layout: default
 title: Team 694
 ---
+<div id="myCarousel" class="carousel slide">
+    <!-- Carousel items -->
+    <div class="carousel-inner">
+        <div class="active item">
+            <img src="http://placehold.it/960x480">
+            <div class="carousel-caption">
+                <h4>First Carousel Item</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <br>
+                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+            </div>
+        </div>
+        <div class="item">
+            <img src="http://placehold.it/960x480">
+            <div class="carousel-caption">
+                <h4>Second Carousel Item</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <br>
+                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+            </div>
+        </div>
+        <div class="item">
+            <img src="http://placehold.it/960x480">
+            <div class="carousel-caption">
+                <h4>Third Carousel Item</h4>
+                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                <br>
+                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+            </div>
+        </div>
+    </div>
+    <!-- Carousel nav -->
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
+
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
     <h1>Hello, world!</h1>
