--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ title: Team 694
             <div class="carousel-caption">
                 <h4>First Carousel Item</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <br>
-                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+                <a href="#" class="btn carousel-btn">Read more <i class="icon-chevron-right"></i></a>
             </div>
         </div>
         <div class="item">
@@ -19,8 +18,7 @@ title: Team 694
             <div class="carousel-caption">
                 <h4>Second Carousel Item</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <br>
-                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+                <a href="#" class="btn carousel-btn">Read more <i class="icon-chevron-right"></i></a>
             </div>
         </div>
         <div class="item">
@@ -28,8 +26,7 @@ title: Team 694
             <div class="carousel-caption">
                 <h4>Third Carousel Item</h4>
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <br>
-                <a href="#" class="btn">Read more <i class="icon-chevron-right"></i></a>
+                <a href="#" class="btn carousel-btn">Read more <i class="icon-chevron-right"></i></a>
             </div>
         </div>
     </div>
