--- a/index.html
+++ b/index.html
@@ -37,26 +37,24 @@ title: Team 694
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
-    <h1>Hello, world!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-    <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>We're Stuypulse Robotics Team 694 of Stuyvesant High School, Manhattan.</h1>
+    <p>Our award-winning student-run team engineers and programs robots from the ground up to compete at FIRST events.</p>
+    <p><a class="btn btn-primary btn-large">Read more about us &raquo;</a></p>
 </div>
 
 <!-- Example row of columns -->
 <div class="row">
-    <div class="span4">
-        <h2>Heading</h2>
+    <div class="span6">
+        <h2>2012's Robot</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn" href="#">View details &raquo;</a></p>
     </div>
-    <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
-    </div>
-    <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn" href="#">View details &raquo;</a></p>
+    <div class="span6">
+        <h2><a href="/blog/">From Our Blog</a></h2>
+        <ul>
+            {% for post in site.posts limit: 3 %}
+                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
 </div>
