--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@ title: Team 694
     </div>
     <div class="span6">
         <h2><a href="/blog/">From Our Blog</a></h2>
-        <ul>
-            {% for post in site.posts limit: 3 %}
-                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-        </ul>
+        {% include latest-posts.html %}
     </div>
 </div>
