Link button in hero to About page.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Team 694
 <div class="hero-unit">
     <h1>We're Stuypulse Robotics Team 694 of Stuyvesant High School, Manhattan.</h1>
     <p>Our award-winning student-run team engineers and programs robots from the ground up to compete at FIRST events.</p>
-    <p><a class="btn btn-primary btn-large">Read more about us &raquo;</a></p>
+    <p><a class="btn btn-primary btn-large" href="/about/">Find out more &raquo;</a></p>
 </div>
 
 <!-- Example row of columns -->
