Add content to Sponsors page, add sponsors box on front page.

--- a/index.html
+++ b/index.html
@@ -44,13 +44,22 @@ title: Team 694
 
 <!-- Example row of columns -->
 <div class="row">
-    <div class="span6">
+    <div class="span4">
         <h2>2012's Robot</h2>
         <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         <p><a class="btn" href="#">View details &raquo;</a></p>
     </div>
-    <div class="span6">
-        <h2><a href="/blog/">From Our Blog</a></h2>
+    <div class="span4">
+        <h2>From Our Blog</h2>
         {% include latest-posts.html %}
+        <p><a class="btn" href="/blog/">See more &raquo;</a></p>
+    </div>
+    <div class="span4">
+        <h2>Sponsors</h2>
+        Stuypulse would like to thank our sponsors:
+        <div style="sponsor-logo-container">
+            <a href="#"><img class="sponsor-logo" src="http://placehold.it/160x120"></a>
+        </div>
+        <p><a class="btn" href="/sponsors/">All sponsors &raquo;</a></p>
     </div>
 </div>
