--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Team 694
     <div class="span4">
         <h2>Sponsors</h2>
         Stuypulse would like to thank our sponsors:
-        <div style="sponsor-logo-container">
+        <div class="sponsor-logo-container">
             <a href="#"><img class="sponsor-logo" src="http://placehold.it/160x120"></a>
         </div>
         <p><a class="btn" href="/sponsors/">All sponsors &raquo;</a></p>
