Add author and date for blog posts

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ carousel:
 
 <!-- Main hero unit for a primary marketing message or call to action -->
 <div class="hero-unit">
-    <h1>We're Stuypulse Robotics Team 694 of Stuyvesant High School, Manhattan.</h1>
-    <p>Our award-winning student-run team engineers and programs robots from the ground up to compete at FIRST events.</p>
+    <h1>We're Stuypulse Robotics <br />  Team 694.</h1>
+    <p>Based in New York, our award-winning student-run team engineers and programs robots from the ground up to compete at FIRST events.</p>
     <p><a class="btn btn-primary btn-large" href="/about/">Find out more &raquo;</a></p>
 </div>
 
