Add a carousel photo of the 1/18 design meeting.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 layout: default
 title: Team 694
 carousel:
-    - img: http://placehold.it/960x480
-      caption-header: First Carousel Item
-      caption-body: Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      read-more-link: /about/
-    - img: http://placehold.it/960x480
-      caption-header: Second Carousel Item
-      caption-body: Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-    - img: http://placehold.it/960x480
-      caption-header: Third Carousel Item
-      caption-body: Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+    - img: /img/carousel/design-meeting.jpg
+      caption-header: Robot design meeting at Whole Foods
+      caption-body: Build Season - End of Week 2
 ---
 <div id="myCarousel" class="carousel slide">
     <!-- Carousel items -->
