Add carousel photo of Stuy Splash.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ carousel:
     - img: /img/carousel/design-meeting.jpg
       caption-header: Robot design meeting at Whole Foods
       caption-body: Build Season - End of Week 2
+    - img: /img/carousel/stuy-splash.jpg
+      caption-header: December 2012 - Stuypulse hosts Stuy Splash
+      caption-body: Stuy Splash is a series of FIRST seminars and workshops. Learn more <a href="/community/projects/stuysplash/">here</a>.
 ---
 <div id="myCarousel" class="carousel slide">
     <!-- Carousel items -->
