Some small tweaks.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ carousel:
         <p><h4><a href="/blog/">See older posts &raquo;</a></h4></p>
     </div>
     <div class="span4">
-        <h2>What is Stuypulse?</h2>
+        <h2>About Stuypulse</h2>
         <div class="sponsor-logo-container">
             <img class="front-page-thumb" src="/img/694-logo.png">
         </div>
