--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -1,9 +1,41 @@
 ---
 layout: page
 title: Projects
+projects:
+    - name: FIRSTConnects
+      url: /community/projects/firstconnects/
+      image-url: http://placehold.it/300x200
+    - name: FIRSTthoughts
+      url: /community/projects/firstthoughts/
+      image-url: http://placehold.it/300x200
+    - name: Maker faire
+      url: /community/projects/makerfaire/
+      image-url: http://placehold.it/300x200
+    - name: Stuy Splash
+      url: /community/projects/stuysplash/ 
+      image-url: http://placehold.it/300x200
+    - name: Team Manager
+      url: /community/projects/teammanger/
+      image-url: http://placehold.it/300x200
 ---
+
 <p>Describe how we do projects, demos, etc. for other teams and the community.</p>
 
+<ul class="thumbnails">
+    {% for project in page.projects %}
+        <li class="span4">
+            <div class="thumbnail">
+                <a href="{{ project.url }}"><img src="{{ project.image-url }}" alt="{{ project.name }}"></a>
+                <div class="caption">
+                    <h3><a href="{{ project.url }}">{{ project.name }}</a></h3>
+                    <p>{{ project.name }} is ...</p>
+                </div>
+            </div>
+         </li>
+    {% endfor %}
+</ul>
+
+{% comment %}
 <ul class="thumbnails">
     <li class="span4">
         <div class="thumbnail">
@@ -50,4 +82,5 @@ title: Projects
              </div>
          </div>
      </li>
-</ul>
+ </ul>
+ {% endcomment %}
