--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -5,18 +5,23 @@ projects:
     - name: FIRSTConnects
       url: /community/projects/firstconnects/
       image-url: http://placehold.it/300x200
+      description: FIRSTConnects.Us started out in response to Dean’s Homework, a challenge to keep track of FIRST Robotics alumni. When it was first written, it was a database of all team members, mentors, alumni, and FIRST volunteers, and it grew to hold hundreds of users from around the globe.
     - name: FIRSTthoughts
       url: /community/projects/firstthoughts/
       image-url: http://placehold.it/300x200
+      description: FIRSTthoughts collects the expertise of individual team members and mentors, and shares it with the greater FIRST community, for years to come, in the spirit of gracious professionalism. This project aims to tackle the “wealth gap” in experience and resources between veteran and rookie teams, and make the FIRST experience as valuable as possible for all participants. 
     - name: Maker faire
       url: /community/projects/makerfaire/
       image-url: http://placehold.it/300x200
+      description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at vehicula sapien. Praesent eleifend aliquet pulvinar. Fusce elementum commodo enim id lobortis. Sed feugiat ultricies.
     - name: Stuy Splash
       url: /community/projects/stuysplash/ 
       image-url: http://placehold.it/300x200
+      description: Stuy Splash is an intensive camp for FRC, covering everything from the foundation of your robot to the 0’s and 1’s that make it overweight. In 2012 it was held at the New York City College of Technology in Brooklyn on December 15th.
     - name: Team Manager
-      url: /community/projects/teammanger/
+      url: /community/projects/teammanager/
       image-url: http://placehold.it/300x200
+      description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at vehicula sapien. Praesent eleifend aliquet pulvinar. Fusce elementum commodo enim id lobortis. Sed feugiat ultricies.
 ---
 
 <p>Describe how we do projects, demos, etc. for other teams and the community.</p>
@@ -28,7 +33,7 @@ projects:
                 <a href="{{ project.url }}"><img src="{{ project.image-url }}" alt="{{ project.name }}"></a>
                 <div class="caption">
                     <h3><a href="{{ project.url }}">{{ project.name }}</a></h3>
-                    <p>{{ project.name }} is ...</p>
+                    <p class="project-description">{{ project.description }}</p>
                 </div>
             </div>
          </li>
