Add carousel photo of Michael1 driver practice.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694
 carousel:
+    - img: /img/carousel/driver-practice.jpg
+      caption-header: Driver practice with Michael1
+      caption-body: Michael1 can never tip over, they said...
     - img: /img/carousel/design-meeting.jpg
       caption-header: Robot design meeting at Whole Foods
       caption-body: Build Season - End of Week 2
