Re-add Maker Faire to projects list.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -10,6 +10,10 @@ projects:
       url: /community/projects/firstthoughts/
       image-url: http://placehold.it/450x300
       description: FIRSTthoughts collects the expertise of individual team members and mentors, and shares it with the greater FIRST community, for years to come, in the spirit of gracious professionalism. This project aims to tackle the “wealth gap” in experience and resources between veteran and rookie teams, and make the FIRST experience as valuable as possible for all participants. 
+    - name: Maker Faire
+      url: /community/projects/makerfaire/
+      image-url: http://placehold.it/450x300
+      description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at vehicula sapien. Praesent eleifend aliquet pulvinar. Fusce elementum commodo enim id lobortis. Sed feugiat ultricies.
     - name: Stuy Splash
       url: /community/projects/stuysplash/ 
       image-url: http://placehold.it/450x300
