--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ carousel:
         <div class="carousel-inner">
             {% for item in page.carousel %}
                 <div class="{% if forloop.first %}active {% endif %}item">
-                    <img src="{{ item.img }}">
+                    <img src="{{ item.img }}" alt="{{ item.caption-header }}">
                     <div class="carousel-caption">
                         <h4>{{ item.caption-header }}</h4>
                         <p>{{ item.caption-body }}</p>
@@ -47,12 +47,12 @@ carousel:
                 </div>
                 <hr>
             {% endfor %}
-            <p><h4><a href="/blog/">See older posts &raquo;</a></h4></p>
+            <h4><a href="/blog/">See older posts &raquo;</a></h4>
         </div>
         <div class="span4">
             <h2>About Stuypulse</h2>
             <div class="sponsor-logo-container">
-                <img class="front-page-thumb" src="/img/694-logo.png">
+                <img class="front-page-thumb" src="/img/694-logo.png" alt="694 logo">
             </div>
             <p>We are <a href="http://stuy.enschool.org/">Stuyvesant High School’s</a> award-winning FIRST Robotics team. Otherwise known as Team 694, Stuypulse seeks to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST program. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
             <p>Today, Team 694 is comprised of approximately 100 Stuy students and participates annually in the FIRST robotics competition. During our six week build season, we work daily in our robotics lab at Stuyvesant High School. Meetings are held nearly everyday during the season as dedicated team members build our competing robot with the help of gracious parents and volunteer mentors.</p>
@@ -60,7 +60,7 @@ carousel:
 
             <h2>About FIRST</h2>
             <div class="sponsor-logo-container">
-                <a href="http://www.usfirst.org/"><img class="front-page-thumb" src="/img/first-logo.png"></a>
+                <a href="http://www.usfirst.org/"><img class="front-page-thumb" src="/img/first-logo.png" alt="FIRST logo"></a>
             </div>
             <p>FIRST (For Inspiration and Recognition in Science and Technology) is a multi-national, non-profit organization aimed at inspiring an interest in science and technology in today’s youth. Since its founding in 1989 by inventor and entrepreneur Dean Kamen (creator of the Segway Human Transporter), FIRST has positively impacted the lives of youths around the world through its accessible and innovative programs. Designed to inspire and encourage participants to pursue careers in science, technology and math, these programs also stress the development of skills in areas such as teamwork, public relations, strategy, dedication, and outreach, many of which are helpful and necessary in future careers and endeavors.</p>
             <p><a href="/about/first/">Learn more &raquo;</a></p>
