Rename Projects section to Projects & Demos.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Projects
+title: Projects &amp; Demos
 projects:
     - name: FIRSTConnects.Us
       url: /community/projects/firstconnects/
