Update some content in Projects section.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -21,7 +21,7 @@ projects:
     - name: Team Manager
       url: /community/projects/teammanager/
       image-url: /img/projects/teammanager.png
-      description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at vehicula sapien. Praesent eleifend aliquet pulvinar. Fusce elementum commodo enim id lobortis. Sed feugiat ultricies.
+      description: An open source web application developed by our web team to facilitate team logistics such as paperwork and trips.
 ---
 
 <p>Describe how we do projects, demos, etc. for other teams and the community.</p>
