--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -8,7 +8,7 @@ projects:
       description: FIRSTConnects.Us started out in response to Dean’s Homework, a challenge to keep track of FIRST Robotics alumni. When it was first written, it was a database of all team members, mentors, alumni, and FIRST volunteers, and it grew to hold hundreds of users from around the globe.
     - name: FIRSTthoughts
       url: /community/projects/firstthoughts/
-      image-url: /img/projects/firstthoughts.png
+      image-url: /img/projects/firstthoughts.jpg
       description: FIRSTthoughts collects the expertise of individual team members and mentors, and shares it with the greater FIRST community, for years to come, in the spirit of gracious professionalism. This project aims to tackle the “wealth gap” in experience and resources between veteran and rookie teams, and make the FIRST experience as valuable as possible for all participants. 
     - name: Maker Faire
       url: /community/projects/makerfaire/
