Make front page title more descriptive. Closes #29.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Team 694
+title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
     - img: /img/carousel/driver-practice.jpg
       caption-header: Driver practice with Michael1
