Add cover description for Maker Fair event.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -13,7 +13,7 @@ projects:
     - name: Maker Faire
       url: /community/projects/makerfaire/
       image-url: /img/projects/makerfaire.jpg
-      description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at vehicula sapien. Praesent eleifend aliquet pulvinar. Fusce elementum commodo enim id lobortis. Sed feugiat ultricies.
+      description: Maker Faire is an annual event dedicated to celebrating "arts, crafts, engineering, science projects, and the Do-It-Yourself mindset" at which Stuypulse demonstrates the year's robot and its capabilities to instill a love of robotics in the young onlookers.
     - name: Stuy Splash
       url: /community/projects/stuysplash/ 
       image-url: /img/projects/stuysplash.jpg
