Edit descriptions on projects page

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -17,11 +17,11 @@ projects:
     - name: Stuy Splash
       url: /community/projects/stuysplash/ 
       image-url: /img/projects/stuysplash.jpg
-      description: Stuy Splash is an intensive camp for FRC, covering everything from the foundation of your robot to the 0’s and 1’s that make it overweight. In 2012 it was held at the New York City College of Technology in Brooklyn on December 15th.
+      description: Stuy Splash is an one-day intensive camp for FRC, covering everything from the foundation of the robot in engineering and programming perspective, to management and strategy skills that could apply to every team.
     - name: Team Manager
       url: /community/projects/teammanager/
       image-url: /img/projects/teammanager.png
-      description: An open source web application developed by our web team to facilitate team logistics such as paperwork and trips.
+      description: Team Manager is an open source organizer developed by our web team to facilitate the team logistics. The clean interface allows users to track and view data of team members in just a click.
 ---
 
 <p>Describe how we do projects, demos, etc. for other teams and the community.</p>
