Improve Team Manager thumbnail description.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -21,7 +21,7 @@ projects:
     - name: Team Manager
       url: /community/projects/teammanager/
       image-url: /img/projects/teammanager.png
-      description: Team Manager is an open source organizer developed by our web team to facilitate the team logistics. The clean interface allows users to track and view data of team members in just a click.
+      description: The Team Manager is an open source application developed by our web team to unify and organize various aspects of team administration including paperwork, trip logistics, and meal assignments.
 ---
 
 <p>Describe how we do projects, demos, etc. for other teams and the community.</p>
