--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@ carousel:
                 <img class="front-page-thumb" src="/img/694-logo.png" alt="694 logo">
             </div>
             <p>We are Stuypulse, <a href="http://stuy.enschool.org/">Stuyvesant High School’s</a> award-winning FIRST Robotics team. Otherwise known as Team 694, we seek to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST competitions. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
-            <p>As of now Team 694 is comprised of approximately 100 Stuy students and participates annually in the FIRST Robotics Competition (FRC). During our six week build season we work almost daily in our laboratory at Stuyvesant as dedicated team members design, construct, and program our competing robot with the help of gracious parents and volunteer mentors.</p>
             <p><a href="/about/">Learn more &raquo;</a></p>
 
             <h2>About FIRST</h2>
             <div class="sponsor-logo-container">
                 <a href="http://www.usfirst.org/"><img class="front-page-thumb" src="/img/first-logo.png" alt="FIRST logo"></a>
             </div>
-            <p><a href="http://www.usfirst.org/">FIRST</a> (For Inspiration and Recognition in Science and Technology) is a multi-national, non-profit organization aimed at inspiring an interest in science and technology in today’s youth. Since its founding in 1989 by inventor and entrepreneur Dean Kamen (creator of the Segway Human Transporter), FIRST has positively impacted the lives of young students around the world through its accessible and innovative programs. Designed to inspire and encourage participants to pursue careers in science, technology and math, these programs also stress the development of skills in areas such as teamwork, public relations, strategy, dedication, and outreach, which are helpful and often necessary in future careers and endeavors.</p>
+            <p><a href="http://www.usfirst.org/">FIRST</a> (For Inspiration and Recognition in Science and Technology) is a multi-national, non-profit organization designed to inspire and encourage today's youth to pursue careers in science, technology and math. These programs also stress the development of skills in areas such as teamwork, public relations, strategy, dedication, and outreach, which are helpful and often necessary in future careers and endeavors.</p>
             <p><a href="/about/first/">Learn more &raquo;</a></p>
 
             <h2>Sponsors</h2>
