Add community project description. close #36

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -24,7 +24,7 @@ projects:
       description: The Team Manager is an open source application developed by our web team to unify and organize various aspects of team administration including paperwork, trip logistics, and meal assignments.
 ---
 
-<p>Describe how we do projects, demos, etc. for other teams and the community.</p>
+<p>Stuypulse has been an active member of the FIRST community since its start. The team initiates innovative projects to bring together FIRST participants, mentors, parents, and local community. Not only has the team participated in many local events to demonstrate the sprits and enthusiasm of FIRST robotics programs, but we have also taken one step further to organize and develop its own community events and projects to help out other teams of FIRST community.</p>
 
 <ul class="thumbnails">
     {% for project in page.projects %}
