--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
+    - img: /img/carousel/srs-bsns.jpg
+      caption-header: Serious business
+      caption-body: Build Season - Week 3
     - img: /img/carousel/driver-practice.jpg
       caption-header: Driver practice with Michael1
       caption-body: Michael1 can never tip over, they said...
