Add electronics board carousel photo.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
+    - img: /img/carousel/electronics-board.jpg
+      caption-header: DESiree's electronics board in progress
+      caption-body: Build Season - Week 5
     - img: /img/carousel/srs-bsns.jpg
       caption-header: Serious business
       caption-body: Build Season - Week 3
