Add meta descriptions for most pages to fix #37.

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Projects &amp; Demos
+description: Stuypulse is an active member of the FIRST community, initiating innovative projects and community events to bring together FIRST participants, mentors, parents, and local community.
 projects:
     - name: FIRSTConnects.Us
       url: /community/projects/firstconnects/
