--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Contact Us
+description: If you have any questions or are interested in mentoring or sponsoring our team, you can send us an email at info@stuypulse.com.
 ---
 <p>Thanks for visiting our site. Questions? Interested in sponsoring or mentoring our team? Contact us by email at <a href="mailto:info@stuypulse.com">info@stuypulse.com</a>!</p>
 
