--- a/calendar/index.html
+++ b/calendar/index.html
@@ -1,5 +1,6 @@
 ---
 layout: page
 title: Event and Meeting Calendar
+description: You can check Stuypulse's calendar to see the meeting and event schedules.
 ---
 <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=info%40stuypulse.com&amp;color=%23A32929&amp;ctz=America%2FNew_York" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
