Remove smart quotes to fix #39

--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -6,7 +6,7 @@ projects:
     - name: FIRSTConnects.Us
       url: /community/projects/firstconnects/
       image-url: http://placehold.it/450x300
-      description: FIRSTConnects.Us started out in response to Dean’s Homework, a challenge to keep track of FIRST Robotics alumni. When it was first written, it was a database of all team members, mentors, alumni, and FIRST volunteers, and it grew to hold hundreds of users from around the globe.
+      description: FIRSTConnects.Us started out in response to Dean's Homework, a challenge to keep track of FIRST Robotics alumni. When it was first written, it was a database of all team members, mentors, alumni, and FIRST volunteers, and it grew to hold hundreds of users from around the globe.
     - name: FIRSTthoughts
       url: /community/projects/firstthoughts/
       image-url: /img/projects/firstthoughts.jpg
