--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ carousel:
             <div class="sponsor-logo-container">
                 <img class="front-page-thumb" src="/img/694-logo.png" alt="694 logo">
             </div>
-            <p>We are Stuypulse, <a href="http://stuy.enschool.org/">Stuyvesant High School’s</a> award-winning FIRST Robotics team. Otherwise known as Team 694, we seek to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST competitions. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
+            <p>We are Stuypulse, <a href="http://stuy.enschool.org/">Stuyvesant High School's</a> award-winning FIRST Robotics team. Otherwise known as Team 694, we seek to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST competitions. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
             <p><a href="/about/">Learn more &raquo;</a></p>
 
             <h2>About FIRST</h2>
