--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -5,7 +5,7 @@ description: Stuypulse is an active member of the FIRST community, initiating in
 projects:
     - name: FIRSTConnects.Us
       url: /community/projects/firstconnects/
-      image-url: http://placehold.it/450x300
+      image-url: /img/projects/firstconnects.png
       description: FIRSTConnects.Us started out in response to Dean's Homework, a challenge to keep track of FIRST Robotics alumni. When it was first written, it was a database of all team members, mentors, alumni, and FIRST volunteers, and it grew to hold hundreds of users from around the globe.
     - name: FIRSTthoughts
       url: /community/projects/firstthoughts/
