--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
+    - img: /img/carousel/oi.jpg
+      caption-header: Preparing for competition
+      caption-body: This year, our operator interface is indestructible.
     - img: /img/carousel/electronics-board.jpg
       caption-header: DESiree's electronics board in progress
       caption-body: Build Season - Week 5
@@ -14,9 +17,6 @@ carousel:
     - img: /img/carousel/design-meeting.jpg
       caption-header: Robot design meeting at Whole Foods
       caption-body: Build Season - End of Week 2
-    - img: /img/carousel/stuy-splash.jpg
-      caption-header: December 2012 - Stuypulse hosts Stuy Splash
-      caption-body: Stuy Splash is a series of FIRST seminars and workshops. Learn more <a href="/community/projects/stuysplash/">here</a>.
 ---
 {% comment %} Hack to properly paginate a subdirectory because Jekyll only renders pagination with the root index.html. {% endcomment %}
 {% unless page.url contains '/blog/page' %} {% comment %} Actual front page content should go in the unless block. {% endcomment %}
