--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
+    - img: /img/carousel/mcdonalds-receipt.jpg
+      caption-header: The ultimate breakfast receipt
+      caption-body: New York City Regional - Friday morning McDonald's breakfast
     - img: /img/carousel/oi.jpg
       caption-header: Preparing for competition
       caption-body: This year, our operator interface is indestructible.
@@ -14,9 +17,6 @@ carousel:
     - img: /img/carousel/driver-practice.jpg
       caption-header: Driver practice with Michael1
       caption-body: Michael1 can never tip over, they said...
-    - img: /img/carousel/design-meeting.jpg
-      caption-header: Robot design meeting at Whole Foods
-      caption-body: Build Season - End of Week 2
 ---
 {% comment %} Hack to properly paginate a subdirectory because Jekyll only renders pagination with the root index.html. {% endcomment %}
 {% unless page.url contains '/blog/page' %} {% comment %} Actual front page content should go in the unless block. {% endcomment %}
