Add carousel photo.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Team 694 - Stuyvesant High School's award winning FIRST Robotics team
 carousel:
+    - img: /img/carousel/nyc-regional-winners.jpg
+      caption-header: Winners of the New York City Regional
+      caption-body: Stuypulse wins the New York City Regional for the first time since 2010.
     - img: /img/carousel/mcdonalds-receipt.jpg
       caption-header: The ultimate breakfast receipt
       caption-body: New York City Regional - Friday morning McDonald's breakfast
@@ -14,9 +17,6 @@ carousel:
     - img: /img/carousel/srs-bsns.jpg
       caption-header: Serious business
       caption-body: Build Season - Week 3
-    - img: /img/carousel/driver-practice.jpg
-      caption-header: Driver practice with Michael1
-      caption-body: Michael1 can never tip over, they said...
 ---
 {% comment %} Hack to properly paginate a subdirectory because Jekyll only renders pagination with the root index.html. {% endcomment %}
 {% unless page.url contains '/blog/page' %} {% comment %} Actual front page content should go in the unless block. {% endcomment %}
