Note that we are in Stuyvesant High School on the contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,8 @@ description: If you have any questions or are interested in mentoring or sponsor
 <p>Thanks for visiting our site. Questions? Interested in sponsoring or mentoring our team? Contact us by email at <a href="mailto:info@stuypulse.com">info@stuypulse.com</a>!</p>
 
 <h3>Our Lab</h3>
-<blockquote>345 Chambers Street<br>
+<blockquote>Stuyvesant High School<br>
+345 Chambers Street<br>
 Room 450<br>
 New York, NY 10282</blockquote>
 
