--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@ carousel:
       caption-body: New York City Regional - Friday morning McDonald's breakfast
     - img: /img/carousel/oi.jpg
       caption-header: Preparing for competition
-      caption-body: This year, our operator interface is indestructible.
-    - img: /img/carousel/electronics-board.jpg
-      caption-header: DESiree's electronics board in progress
-      caption-body: Build Season - Week 5
-    - img: /img/carousel/srs-bsns.jpg
-      caption-header: Serious business
-      caption-body: Build Season - Week 3
+      caption-body: Our 2013 operator interface is indestructible.
+    - img: /img/carousel/milling.jpg
+      caption-header: Hard at work at the mill
+      caption-body: 2014 Build Season - Week 4
+    - img: /img/carousel/sawing.jpg
+      caption-header: Heads-down building!
+      caption-body: 2014 Build Season - Week 5
+    - img: /img/carousel/not-electronics-plate.jpg
+      caption-header: One of our many dubious label
+      caption-body: DESmond's electronics board
+    - img: /img/carousel/splash-2013.jpg
+      caption-header: Ameya leads Stuy Splash
+      caption-body: Our President of Engineering opening the 2013 session
 ---
 {% comment %} Hack to properly paginate a subdirectory because Jekyll only renders pagination with the root index.html. {% endcomment %}
 {% unless page.url contains '/blog/page' %} {% comment %} Actual front page content should go in the unless block. {% endcomment %}
