--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ carousel:
       caption-header: Heads-down building!
       caption-body: 2014 Build Season - Week 5
     - img: /img/carousel/not-electronics-plate.jpg
-      caption-header: One of our many dubious label
+      caption-header: One of our many dubious labels
       caption-body: DESmond's electronics board
     - img: /img/carousel/splash-2013.jpg
       caption-header: Ameya leads Stuy Splash
