Site-wide switch from Stuypulse to StuyPulse

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Stuypulse | Ain't gon' work!</title>
+        <title>StuyPulse | Ain't gon' work!</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -32,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/">Stuypulse</a>
+                    <a class="brand" href="/">StuyPulse</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right">
                             <li class="dropdown">
@@ -86,11 +86,11 @@
                         <footer>
                 <div class="footer-nav">
                     <ul>
-                        <li>&copy; Stuypulse 2013</li>
+                        <li>&copy; StuyPulse 2013</li>
                         <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
                         <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
-                        <li><a href="http://www.facebook.com/pages/Stuypulse-Team-694/81277690973">Like</a></li>
+                        <li><a href="http://www.facebook.com/pages/StuyPulse-Team-694/81277690973">Like</a></li>
                         <li><a href="http://www.youtube.com/stuy694">Subscribe</a></li>
                         <li><a href="https://github.com/prog694">Fork</a></li>
                     </ul>
