--- a/community/projects/index.html
+++ b/community/projects/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Projects &amp; Demos
-description: Stuypulse is an active member of the FIRST community, initiating innovative projects and community events to bring together FIRST participants, mentors, parents, and local community.
+description: StuyPulse is an active member of the FIRST community, initiating innovative projects and community events to bring together FIRST participants, mentors, parents, and local community.
 projects:
     - name: FIRSTConnects.Us
       url: /community/projects/firstconnects/
@@ -14,7 +14,7 @@ projects:
     - name: Maker Faire
       url: /community/projects/makerfaire/
       image-url: /img/projects/makerfaire.jpg
-      description: Maker Faire is an annual event dedicated to celebrating "arts, crafts, engineering, science projects, and the Do-It-Yourself mindset" at which Stuypulse demonstrates the year's robot and its capabilities to instill a love of robotics in the young onlookers.
+      description: Maker Faire is an annual event dedicated to celebrating "arts, crafts, engineering, science projects, and the Do-It-Yourself mindset" at which StuyPulse demonstrates the year's robot and its capabilities to instill a love of robotics in the young onlookers.
     - name: Stuy Splash
       url: /community/projects/stuysplash/ 
       image-url: /img/projects/stuysplash.jpg
@@ -25,7 +25,7 @@ projects:
       description: The Team Manager is an open source application developed by our web team to unify and organize various aspects of team administration including paperwork, trip logistics, and meal assignments.
 ---
 
-<p>Stuypulse has been an active member of the FIRST community since its start. The team initiates innovative projects to bring together FIRST participants, mentors, parents, and local community. Not only has the team participated in many local events to demonstrate the sprits and enthusiasm of FIRST robotics programs, but we have also taken one step further to organize and develop its own community events and projects to help out other teams of FIRST community.</p>
+<p>StuyPulse has been an active member of the FIRST community since its start. The team initiates innovative projects to bring together FIRST participants, mentors, parents, and local community. Not only has the team participated in many local events to demonstrate the sprits and enthusiasm of FIRST robotics programs, but we have also taken one step further to organize and develop its own community events and projects to help out other teams of FIRST community.</p>
 
 <ul class="thumbnails">
     {% for project in page.projects %}
