--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ carousel:
       caption-body: Our President of Engineering opening the 2013 session
     - img: /img/carousel/nyc-regional-winners.jpg
       caption-header: Winners of the New York City Regional
-      caption-body: Stuypulse wins the New York City Regional for the first time since 2010.
+      caption-body: StuyPulse wins the New York City Regional for the first time since 2010.
 ---
 {% comment %} Hack to properly paginate a subdirectory because Jekyll only renders pagination with the root index.html. {% endcomment %}
 {% unless page.url contains '/blog/page' %} {% comment %} Actual front page content should go in the unless block. {% endcomment %}
@@ -56,11 +56,11 @@ carousel:
             <h4><a href="/blog/">See older posts &raquo;</a></h4>
         </div>
         <div class="span4">
-            <h2>About Stuypulse</h2>
+            <h2>About StuyPulse</h2>
             <div class="sponsor-logo-container">
                 <img class="front-page-thumb" src="/img/694-logo.png" alt="694 logo">
             </div>
-            <p>We are Stuypulse, <a href="http://stuy.enschool.org/">Stuyvesant High School's</a> award-winning FIRST Robotics team. Otherwise known as Team 694, we seek to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST competitions. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
+            <p>We are StuyPulse, <a href="http://stuy.enschool.org/">Stuyvesant High School's</a> award-winning FIRST Robotics team. Otherwise known as Team 694, we seek to impact young adults by cultivating skills in engineering, programming, marketing, teamwork, and leadership through the FIRST competitions. At the same time, we hope to educate and inspire people in our community, both young and old, about the wonders of science and technology.</p>
             <p><a href="/about/">Learn more &raquo;</a></p>
 
             <h2>About FIRST</h2>
